# sim_bot

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  compile_commands.json  package.xml
config/: joystick.yaml  obstacles.yaml
description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
launch/: joystick.launch.py  launch_sim.launch.py  obstacles.launch.py  sim_with_obstacles.launch.py
plugins/: TrajectoryVisualPlugin.cc
scripts/: obstacle_controller.py
worlds/: empty.world
